delete some files no need to be reviewed again.

--- a/video-as-webpage-background.html
+++ b/video-as-webpage-background.html
@@ -49,7 +49,7 @@
 
 	<div class="bg-wrp">
 		<video class="bg-video" id="vid-bg-elem" autoplay loop muted>
-			<source src="vid.mp4" type="video/mp4"></source>
+			<source src="./src/vid.mp4" type="video/mp4"></source>
 			视频不支持
 		</video>
 	</div>
